test/sema/typeck/literal/int32-neg-overflow.dora
fn f() { let x = -2147483649i32; }
